<resources>
  <string name="app_name">Apis Cerana</string>
  <string name="code_425">Data Broken on send/Your session is end</string>
  <string name="code_500">Response not found/Your session is end</string>
  <string name="withdraw_limit">Your withdrawal is still handled by the Admin</string>
  <string name="logo">Logo</string>
  <string name="username">username</string>
  <string name="password">password</string>
  <string name="login">Login</string>
  <string name="profile">Profile</string>
  <string name="ktp">KTP</string>
  <string name="name">Name</string>
  <string name="email">Email</string>
  <string name="address">Address</string>
  <string name="bank">BANK</string>
  <string name="pin_bank">PIN Bank</string>
  <string name="phone_number">Phone number</string>
  <string name="validation_password">Confirm Password</string>
  <string name="province">Province</string>
  <string name="district">County town</string>
  <string name="sub_district">Kelurahan</string>
  <string name="village">Village</string>
  <string name="number_address">House Number</string>
  <string name="description_address">RT / RW. House Address Information</string>
  <string name="alert_massage">The data entered must match the KTP</string>
  <string name="icon">Icon</string>
  <string name="balance">Balance</string>
  <string name="qr">QR</string>
  <string name="withdraw">Withdraw</string>
  <string name="request_stup">Request Stup</string>
  <string name="owner">Owner</string>
  <string name="receipt_date">Receipt Date</string>
  <string name="date_of_retrieval">Date of Retrieval</string>
  <string name="home">Home</string>
  <string name="default_balance">0</string>
  <string name="rp">Rp</string>
  <string name="submit">Submit</string>
  <string name="total_stup">Total Stup</string>
  <string name="transferred_to">Transferred to</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="upload_ktp">Upload KTP</string>
  <string name="image_ktp">Image KTP</string>
  <string name="photo_holding_ktp_id">photo holding KTP ID</string>
  <string name="after_uploading_the_image_wait_for_the_admin_to_confirm_the_data_you_sent">After uploading the image, wait for the admin to confirm the data you sent</string>
  <string name="number_ktp">Number KTP</string>
  <string name="sher_on_what_app">Enter your username and photo of proof of transfer here</string>
  <string name="upload_proof_of_transfer">Share Proof of Transfer</string>
  <string name="add_user">Add User</string>
</resources>
