<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.RegisterActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_marginStart="20dp"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="50dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/logo"
        tools:srcCompat="@mipmap/ic_launcher_foreground"
        app:srcCompat="@mipmap/ic_launcher_foreground"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/validationPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/validation_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/accountIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/number_ktp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/bankEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/bank"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/pinBankEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/pin_bank"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/provinceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/province"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/districtEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/district"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/subDistrictEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/sub_district"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/villageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/village"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/numberAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/number_address"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <EditText
        android:id="@+id/descriptionAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/description_address"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/alert_massage"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_success"
        android:text="@string/submit"
        android:textColor="@color/textSecondary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

  </LinearLayout>

</ScrollView>