<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.EditProfileActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageView"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorAccent"
        android:src="@mipmap/ic_launcher_foreground"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"
        tools:ignore="Autofill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/provinceEditText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:backgroundTint="@color/colorAccent"
          android:ems="10"
          android:hint="@string/province"
          android:inputType="textPersonName|textPostalAddress"
          android:textColor="@color/colorAccent"
          android:textColorHint="@color/orange"
          tools:ignore="Autofill"/>

      <EditText
          android:id="@+id/districtEditText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:backgroundTint="@color/colorAccent"
          android:ems="10"
          android:hint="@string/district"
          android:inputType="textPersonName|textPostalAddress"
          android:textColor="@color/colorAccent"
          android:textColorHint="@color/orange"
          tools:ignore="Autofill"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/subDistrictEditText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:backgroundTint="@color/colorAccent"
          android:ems="10"
          android:hint="@string/sub_district"
          android:inputType="textPersonName|textPostalAddress"
          android:textColor="@color/colorAccent"
          android:textColorHint="@color/orange"
          tools:ignore="Autofill"/>

      <EditText
          android:id="@+id/villageEditText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:backgroundTint="@color/colorAccent"
          android:ems="10"
          android:hint="@string/village"
          android:inputType="textPersonName|textPostalAddress"
          android:textColor="@color/colorAccent"
          android:textColorHint="@color/orange"
          tools:ignore="Autofill"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/descriptionAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/description_address"
        android:inputType="textPersonName|textPostalAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"
        tools:ignore="Autofill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/numberAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/number_address"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/orange"
        tools:ignore="Autofill"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_success"
        android:text="@string/submit"
        android:textColor="@color/textSecondary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

  </LinearLayout>

</ScrollView>