<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.RequestStupActivity">

  <LinearLayout
      android:gravity="center"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bankToTransferLinearLayout"
        android:background="@drawable/card_primary"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/transferred_to"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:textAlignment="center"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:text="@string/name"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/nameTextView"/>

      <TextView
          android:text="@string/bank"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/bankTextView"/>

      <TextView
          android:text="@string/pin_bank"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/pinBankTextView"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/total_stup"
          android:textColor="@color/colorAccent"
          android:layout_weight="0.5"
          android:gravity="center"
          android:textSize="20sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

      <EditText
          android:layout_weight="1"
          android:hint="@string/default_balance"
          android:textColor="@color/colorAccent"
          android:textColorHint="@color/colorSecondary"
          android:backgroundTint="@color/colorAccent"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:ems="10"
          android:id="@+id/totalEditText"
          tools:ignore="Autofill"/>

    </LinearLayout>

    <Button
        android:layout_margin="30dp"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textSecondary"
        android:background="@drawable/button_success"
        android:id="@+id/submitButton"/>

    <LinearLayout
        android:id="@+id/contentDataLinearLayout"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

  </LinearLayout>

</ScrollView>