<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textSecondary"
        android:textColorHint="@color/textSecondary"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/usernameEditText"
        android:autofillHints="@string/username"
        tools:targetApi="o"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textSecondary"
        android:textColorHint="@color/textSecondary"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:autofillHints="@string/password"
        tools:targetApi="o"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_warning"
        android:textColor="@color/textSecondary"
        android:id="@+id/loginButton"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

  </LinearLayout>

</ScrollView>