<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ProfileFragment">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/background_home"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="bottom|center"
        android:layout_height="220dp">

      <TextView
          android:text="@string/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:textColor="@color/textSecondary"
          android:textSize="20sp"
          android:textStyle="bold"
          android:id="@+id/usernameTextView"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="20dp"/>

      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/profileImageView"
          android:layout_width="130dp"
          android:layout_height="130dp"
          android:layout_gravity="bottom|center"
          android:layout_marginBottom="20dp"
          android:contentDescription="@string/profile"
          android:src="@mipmap/ic_launcher_foreground"
          app:civ_border_width="2dp"
          app:civ_border_color="@color/colorAccent"
          />

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/ktp"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:text="@string/ktp"
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/ktpTextView"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/name"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:text="@string/name"
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/nameTextView"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/email"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:text="@string/email"
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/emailTextView"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/address"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:text="@string/address"
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/addressTextView"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/bank"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:text="@string/bank"
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/bankTextView"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/bank_account_number"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:text="@string/bank_account_number"
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/idBankTextView"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:elevation="50dp"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/phone_number"
          android:layout_marginTop="5dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"/>

      <TextView
          android:text="@string/phone_number"
          android:layout_marginStart="25dp"
          android:layout_marginEnd="25dp"
          android:layout_marginBottom="5dp"
          android:textSize="17sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/colorAccent"
          android:id="@+id/phoneTextView"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

  </LinearLayout>

</ScrollView>